--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -25,6 +25,7 @@
         <ion-button name="ion-button-ajax" color="success" >Success</ion-button>
         <br/>
         <strong class="capitalize">{{ folder }}</strong>
+        <strong class="capitalize">{{ host_ip }}</strong>
         <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p> 
       <br/>
 
